# mock_lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: README.md
data/: README.md
data/TIPS/: TIPS_2024_v1p2.py
data/TIPS/data/: 1.QTpy  10.QTpy  12.QTpy  13.QTpy  14.QTpy  15.QTpy  18.QTpy  19.QTpy  22.QTpy  24.QTpy  25.QTpy  26.QTpy  29.QTpy  3.QTpy  33.QTpy  34.QTpy  35.QTpy  36.QTpy  37.QTpy  39.QTpy  4.QTpy  41.QTpy  43.QTpy  49.QTpy  51.QTpy  58.QTpy  6.QTpy  61.QTpy  8.QTpy  9.QTpy
data/interim/: README.md
data/processed/: README.md
data/raw/: MockLabData_Baseline.mat  MockLabData_Shock.mat
docs/: README.md  assignment_notes.md
examples/: README.md
examples/matlab_voigt_demo/: Demo_Absorbance_Fit.m  Example_Absorbance_Data.mat  README.md  Voigt_Approx_McLean_Vectorized_Fit_Demo.m  get_IntArea_guess.m
notebooks/: README.md
report/: README.md  main.tex  main.xdv  references.bib
results/: README.md
scripts/: README.md  extract_hitemp_par_to_csv.py  extract_mock_lab_hitemp_transitions.py  plot_state_history_monte_carlo.py  run_baseline.py  run_etalon.py  run_full_pipeline.py  run_report_figures.py  run_shock_snapshot.py  run_state_history_monte_carlo.py  run_time_history.py  run_voigt_fit.py  run_voigt_fit_video.py
src/mock_lab/: README.md  __init__.py
src/mock_lab/io/: README.md  __init__.py  (+1 more)
tests/: README.md  conftest.py  test_hitemp_parser.py  test_line_strengths.py  test_mat_io.py  test_monte_carlo_state_history.py  test_pipelines.py  test_reporting_summary.py  test_state_estimation.py  test_tips.py  test_voigt_fit.py
(+26 files in other folders)
