[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-lab"
version = "0.1.0"
description = "Python-first workspace for the ME 617 mock shock-tube lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
notebooks = [
    "ipykernel",
    "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
